@@ -1179,6 +1179,24 @@ This word is applied to objects or ideas.[2]</column>
       <column name="search_tags"></column>
       <column name="source">[1] {TKD:src}, [2] {KGT p.130:src}</column>
     </table>
+    <!--
+    <table name="mem">
+      <column name="_id">23965</column>
+      <column name="entry_name">nguDuruDIStan</column>
+      <column name="part_of_speech">n:place</column>
+      <column name="definition">Nguduroodistan (Lamb Island)</column>
+      <column name="definition_de"></column>
+      <column name="synonyms"></column>
+      <column name="antonyms"></column>
+      <column name="see_also"></column>
+      <column name="notes">On Oct. 19, 2013, Lamb Island voted to secede from Australia and become the independent nation of Nguduroodistan.</column>
+      <column name="hidden_notes"></column>
+      <column name="components"></column>
+      <column name="examples"></column>
+      <column name="search_tags"></column>
+      <column name="source"></column>
+    </table>
+    -->
     <table name="mem">
       <column name="_id">23970</column>
       <column name="entry_name">ngugh</column>
