@@ -1,5 +1,6 @@
 CHANGELOG
 
+2013-10-20: Add README file. Add dependency on StandOut library.
 2013-10-15: German entries for {'a}, {'e}, {'I}, {'o}, and {y}. Miscellaneous edits.
 
 2013-09-23: German entries for {Q} and {m}.
